tree-sitter/tree-sitter-spthy/grammar.js
      theory: $ => seq(
          'theory',
          field('theory_name', $.ident),
          optional(seq('configuration', ':', '"', $.commandline , '"')),
          'begin',
          repeat($._body_item),
          'end',
          repeat(
              /./
          )
      ),

      _body_item: $ => choice(
          $.preprocessor,
          $._signature_spec,
          $.global_heuristic,
          $.tactic,
          $.process,  // SAPIC+
          $.let,
          $.export,
          $._rule,
          $.restriction,
          $.case_test,
          $._lemma,
          $.formal_comment
      ),


      /*
       * Preprocessor:
       */
      functions: $ => prec.right(seq(
          'functions',
          ':',
          $._function_sym,
          repeat(seq(
              ',',
              $._function_sym
          )),
          optional(',')
      )),

      _function_sym: $ => choice(
          $.function_untyped,
          $.function_typed
      ),

      function_untyped: $ => seq(
          field('function_identifier', $.ident),
          '/',
          field('arity', $.natural),
          optional ( seq (
              '[',
                  $.function_attribute,
                  repeat(seq(
                      ',',
                      $.function_attribute
                  )),
                  optional(',')
              ,']')
          )
      ),

      global_heuristic: $ => seq(
          'heuristic',
          ':',
          optional($._heuristic_leading_space),
          field('heuristic', $.heuristic),
          $._heuristic_end
      ),

      // The initial token follows the ordinary lexer; subsequent tokens allow
      // only ASCII spaces. Comments must explicitly end the sequence because
      // named extras can otherwise be skipped even before immediate tokens.
      _heuristic_leading_space: $ => repeat1(choice(/[\s\u00A0]/, $.single_comment, $.multi_comment)),

      _heuristic_end: $ => choice(
          token.immediate(/ *[\t\r\n\f\v]/),
          $.single_comment,
          $.multi_comment
      ),

      heuristic: $ => repeat1(choice(
          alias($._heuristic_builtin, $.builtin_ranking),
          $.oracle_ranking,
          $.tactic_reference
      )),

      _heuristic_builtin: $ => token.immediate(prec(1, seq(/ */, builtinRanking()))),

      tactic_reference: $ => seq(
          token.immediate(/ *\{ */),
          field('name', $.tactic_name),
          token.immediate('}')
      ),

      process: $ => seq(
          'process', ':',
          $._process
      ),

      _process: $ => choice(
          $._elementary_process,
          $._extended_process,
          $._stateful_process,
          $.inline_msr_process,
          $.nested_process,
          $.location_process,
          $.predefined_process

      ),

      output: $ => prec.right(choice(
          seq(
              'out', '(', $.mset_term, ',', $.mset_term, ')',
              optional(seq(';', $._process))
          ),
          seq(
              'out', '(', $.mset_term, ')',
              optional(seq(';', $._process))
          )
      )),

      null: $ => '0',

      // extended processes:
      read_state: $ => prec.right('LOOKUP', seq(
          'lookup', field('from', $.mset_term),
          'as', field('to', choice(
              $._lookup_var_no_suffix,
              alias($._typed_lookup_var, $.custom_var),
              alias($._any_lookup_var, $.any_var)
          )),
          'in', field('in', $._process),
          optional(seq('else', field('else', $._process))),
          optional(seq(';', $._process))
      )),

      _typed_lookup_var: $ => seq(
          $._lookup_var_no_suffix, ':', field('variable_type', $.ident)
      ),

      _any_lookup_var: $ => seq($._lookup_var_no_suffix, ':', 'ANY'),

      // SAPIC accepts a sort prefix and one type annotation, not x:pub:type.
      _lookup_var_no_suffix: $ => choice(
          alias($._lookup_var_identifier, $.msg_var_or_nullary_fun),
          alias($._lookup_pub_var, $.pub_var),
          alias($._lookup_fresh_var, $.fresh_var),
          alias($._lookup_temporal_var, $.temporal_var),
          alias($._lookup_nat_var, $.nat_var)
      ),

      rule: $ => seq(
          $.simple_rule,
          optional($.variants)
      ),

      simple_rule: $ => seq(
          'rule',
          optional($.modulo),
          field('rule_identifier', $.ident),
          optional($.rule_attrs),
          ':',
          optional($.rule_let_block),
          $.premise,
          choice(
              '-->',
              $.action_fact
          ),
          $.conclusion
      ),

      premise: $ => seq(
          '[', optional($._facts), ']'
      ),

      conclusion: $ => seq(
          '[', optional($._facts), ']'
      ),

      _facts: $ => prec.left(seq(
          $._fact,
          repeat(seq(
              ',',
              $._fact
          )),
          optional(',')
      )),

      linear_fact: $ => $._base_fact,

      _base_fact: $ => prec.left(seq(
          field('fact_identifier', alias($.fact_identifier, $.ident)),
          '(',
          optional($.arguments),
          ')',
          optional($.fact_annotes)
      )),

      lemma: $ => seq(
          'lemma',
          optional($.modulo),
          field('lemma_identifier', $.ident),
          optional($.lemma_attrs),
          ':',
          optional($.trace_quantifier),
          '"', field('formula', $._formula), '"',
          optional(field('proof_skeleton', $._proof_skeleton))
      ),

      lemma_attr: $ => choice(
          'typing', // Legacy alias for sources, still accepted by Haskell.
          'sources',
          'reuse',
          'diff_reuse',
          'use_induction',
          seq('output', '=', '[', commaSep($.language), ']'),
          seq('hide_lemma', '=', $.ident),
          seq('heuristic', '=',
              optional($._heuristic_leading_space),
              field('heuristic', $.heuristic),
              optional(choice($.single_comment, $.multi_comment)))
      ),

      lemma_attrs: $ => seq(
          '[',
          commaSep(choice($.diff_lemma_attr, $.lemma_attr)),
          ']'
      ),

      diff_lemma_attr: $ => choice(
          'left',
          'right'
      ),

      _proof_skeleton: $ => choice(
          $.solved,
          $.mirrored,
          $.by_method,
          $.method_skeleton,
          $.cases
      ),

      _term: $ => choice(
          $.tuple_term,
          $.nested_term,
          $.nullary_fun,
          $.binary_app,
          $.nary_app,
          $._literal
      ),

      mset_term: $ => prec.left('MUL_SET', seq(
          field('left', $.nat_term),
          repeat(seq(
            choice('++', '+'),
            field('right', $.nat_term)
          ))
      )),

      nat_term: $ => prec.left('ADD', seq(
          field('left', $.xor_term),
          repeat(seq(
            '%+',
            field('right', $.xor_term)
          ))
      )),

      xor_term: $ => prec.left('EXCLUSIVE_OR', seq(
          field('left', $.mul_term),
          repeat(seq(
            choice('XOR', '⊕'),
            field('right', $.mul_term)
          ))
      )),

      mul_term: $ => prec.left('MULTIPLY', seq(
          field('left', $.exp_term),
          repeat(seq(
            '*',
            field('right', $.exp_term)
          ))
      )),

      exp_term: $ => prec.right('EXPONENTIAL', seq(
          field('base', $._term),
          repeat(seq(
             '^',
            field('exponent', $._term)
          ))
      )),

      arguments: $ => seq(
          field('argument', choice($.mset_term, $.temporal_var)),
          repeat(seq(
              ',', field('argument', $.mset_term)
          ))
      ),




      // Variable:
      _literal: $ => choice(
          $.pub_name,
          $.fresh_name,
          $._non_temporal_var, // non-temporal variable
          $.comp_var, // compare variable for pattern matching
          $._custom_type_var // variable with custom type
      ),

      pub_var: $ => prec('VARIABLE', choice(
          seq( //'pub' sort prefix
              '$',
              field('variable_identifier', $._term_ident),
              optional(seq(
                  '.', $.natural
              ))
          ),
          seq( //'pub' sort suffix
              field('variable_identifier', $._term_ident),
              optional(seq(
                  '.', $.natural
              )),
              ':', 'pub'
          ),
      )),

      msg_var_or_nullary_fun: $ => prec('VARIABLE' ,seq(
          field('variable_identifier', $._term_ident), // 'msg' sort prefix
          optional(seq(
              '.',
              $.natural
          )),
          optional(seq( // 'msg' sort suffix
              ':',
              'msg'
          ))
      )),

      custom_var: $ => prec(-1, seq(
          $._literal,
          ':', field('variable_type', $.ident)
      )),

      any_var: $ => prec(-1, seq(
          $._literal,
          ':', 'ANY'
      )),

      // temporal prefix is optional for action constraints and temporal ordering
      pub_name: $ =>  seq( // fixed, public name
          "'",
          /[^\n']+/,
          "'"
      ),

      _formula: $ => choice(
          $.iff,
          $.imp,
          $.disjunction,
          $.conjunction,
          $.negation,
          $.nested_formula,
          $._temporal_variable_operation,
          $.action_constraint,
          $.term_eq,
          $.subterm_rel,
          $.lesser_check,
          $.quantified_formula,
          $.atom,
          $.predicate_ref,
          $.pre_defined
      ),

      atom: $ => prec('ATOM', choice(
          '⊥', 'F', '⊤', 'T', // True, False
      )),

      _term_ident: $ => choice(
          $.ident,
          alias($.fact_identifier, $.ident)
      ),


      /*
       * Terminals:
       */
      ident: $ => /[A-Za-z0-9]\w*/,

      natural: $ => /[0-9]+/,

      formal_comment: $ => seq(
          field('comment_identifier', $.ident),
          token(seq(
              '{*',
              /[^*]*\*+([^}*][^*]*\*+)*/,
              '}'
          ))
      )

  }
});

// A tactic presort selects one builtin; a heuristic can concatenate these
// with oracle rankings. Keep their shared alphabet in one place.
// Literal choices also give presorts the grammar's identifier boundaries.
function builtinRanking() {
    return choice('C', 'I', 'S', 'P', 'c', 'i', 's', 'p');
}

// Match the Haskell parser's list: zero or more items with a trailing comma.
function commaSep(rule) {
    return optional(seq(rule, repeat(seq(',', rule)), optional(',')));
}
